# orquestra-cirq

./: .gitignore  Makefile  README.md  codecov.yml  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  style.yml
src/orquestra/integrations/cirq/: _pandas_compat.py
src/orquestra/integrations/cirq/conversions/: __init__.py  _circuit_conversions.py  _cirq_pauli_conversions.py  _openfermion_conversions.py  _pauli_conversions.py
src/orquestra/integrations/cirq/decompositions/: __init__.py  _cirq_decompositions.py
src/orquestra/integrations/cirq/noise/: __init__.py  basic.py
src/orquestra/integrations/cirq/simulator/: __init__.py  _base.py  _cirq_simulator.py  _qsim_simulator.py  qsim_simulator.py  simulator.py
src/orquestra/integrations/custatevec/: __init__.py
src/orquestra/integrations/custatevec/runner/: custatevec.py
src/orquestra/integrations/custatevec/simulator/: __init__.py  _custatevec.py  custatevec.py
subtrees/z_quantum_actions/: sample_setup.py
subtrees/z_quantum_actions/actions/coverage/: action.yml
subtrees/z_quantum_actions/workflow-templates/: coverage.yml  style.yml
tests/orquestra/integrations/cirq/conversions/: circuit_conversions_test.py  cirq_conversions_test.py  cirq_pauli_conversions_test.py  openfermion_conversions_test.py  pauli_conversions_test.py
tests/orquestra/integrations/cirq/decompositions/: cirq_decomposition_test.py
tests/orquestra/integrations/cirq/noise/: basic_test.py
tests/orquestra/integrations/cirq/simulator/: custatevec_test.py  qsimsimulator_test.py  simulator_test.py
