[metadata]
name = orquestra-cirq
description = "Orquestra Cirq package"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-cirq
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    #This is to fix unbounded dependency in cirq 0.13
    protobuf<4
    cirq-core<=0.13
    cirq-google<=0.13
    orquestra-quantum


[options.packages.find]
where = src

[options.extras_require]
qsim =
    qsimcirq ~=0.12.1
dev =
    orquestra-python-dev

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
